// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns article results when searching article R1225-18 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 14.930277,
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "_score": 1.1191392,
      "algo": "semantic",
      "description": "Calculez la durée de préavis de démission",
      "slug": "preavis-demission",
      "source": "outils",
      "title": "Préavis de démission",
    },
    Object {
      "_score": 1.1074626,
      "algo": "semantic",
      "description": "Estimez le montant de l’indemnité de licenciement",
      "slug": "indemnite-licenciement",
      "source": "outils",
      "title": "Indemnité de licenciement",
    },
    Object {
      "_score": 1.0863602,
      "algo": "semantic",
      "description": "Consulter et utiliser ses droits pour la formation",
      "slug": "mon-compte-formation",
      "source": "external",
      "title": "Mon compte formation",
      "url": "https://www.moncompteformation.gouv.fr",
    },
    Object {
      "_score": 1.0449069,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
    Object {
      "_score": 1.0381742,
      "algo": "semantic",
      "description": "L’outil de calcul de votre index égalité professionnelle Femmes- Hommes",
      "slug": "index-egapro",
      "source": "external",
      "title": "Index Egapro",
      "url": "https://index-egapro.travail.gouv.fr",
    },
    Object {
      "_score": 1.0301335,
      "algo": "semantic",
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
  ],
  "themes": Array [
    Object {
      "_score": 1.123209,
      "algo": "semantic",
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "_score": 1.1099768,
      "algo": "semantic",
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
  ],
}
`;

exports[`returns search results for demission from datafiller 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 1.9621034,
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
    Object {
      "_score": 2.0045066,
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
    Object {
      "_score": 0,
      "algo": "pre-qualified",
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
  ],
  "themes": Array [
    Object {
      "_score": 1.123209,
      "algo": "semantic",
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "_score": 1.1099768,
      "algo": "semantic",
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
  ],
}
`;

exports[`returns search results for demission from elastic 1`] = `
Object {
  "articles": Array [
    Object {
      "_score": 2.0045066,
      "description": "Le salarié informe son employeur de sa démission, en application de l'article L. 1225-66 , par lettre recommandée avec avis de réception ou remise contre récépissé. Il adresse à l'employeur sa demande de réembauche, en application de l'article L. 1225-67 , par lettre recommandée avec avis de réception ou remise contre récépissé",
      "slug": "r1225-18",
      "source": "code_du_travail",
      "title": "R1225-18",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000018537778&cidTexte=LEGITEXT000006072050",
    },
    Object {
      "_score": 1.9621034,
      "description": "En cas de démission, l'existence et la durée du préavis sont fixées par la loi, ou par convention ou accord collectif de travail. En l'absence de dispositions légales, de convention ou accord collectif de travail relatifs au préavis, son existence et sa durée résultent des usages pratiqués dans la localité et dans la profession. Un décret en Conseil d'Etat détermine les modalités d'application du présent article",
      "slug": "l1237-1",
      "source": "code_du_travail",
      "title": "L1237-1",
      "url": "https://www.legifrance.gouv.fr/affichCodeArticle.do;?idArticle=LEGIARTI000006901174&cidTexte=LEGITEXT000006072050",
    },
  ],
  "documents": Array [
    Object {
      "_score": 1.1191392,
      "algo": "both",
      "description": "Calculez la durée de préavis de démission",
      "slug": "preavis-demission",
      "source": "outils",
      "title": "Préavis de démission",
    },
    Object {
      "_score": 6.4235735,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "La démission permet au salarié, à son initiative, de rompre son contrat de travail, sous conditions.",
      "slug": "demission-dun-salarie",
      "source": "fiches_service_public",
      "title": "Démission d'un salarié",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F2883",
    },
    Object {
      "_score": 1.1074626,
      "algo": "semantic",
      "description": "Estimez le montant de l’indemnité de licenciement",
      "slug": "indemnite-licenciement",
      "source": "outils",
      "title": "Indemnité de licenciement",
    },
    Object {
      "_score": 1.0863602,
      "algo": "semantic",
      "description": "Consulter et utiliser ses droits pour la formation",
      "slug": "mon-compte-formation",
      "source": "external",
      "title": "Mon compte formation",
      "url": "https://www.moncompteformation.gouv.fr",
    },
    Object {
      "_score": 5.739362,
      "algo": "both",
      "breadcrumbs": Array [
        Object {
          "slug": "8-depart-de-lentreprise",
          "title": "Départ de l'entreprise",
        },
        Object {
          "slug": "81-demission",
          "title": "Démission",
        },
      ],
      "description": "L'assistante maternelle (ou assistant maternel) agréée qui souhaite rompre son contrat de travail doit informer le particulier employeur par écrit et respecter un préavis. À la fin de celui-ci, l'employeur remet les documents de fin de contrat.",
      "slug": "demission-dune-assistante-maternelle",
      "source": "fiches_service_public",
      "title": "Démission d'une assistante maternelle",
      "url": "https://www.service-public.fr/particuliers/vosdroits/F33164",
    },
    Object {
      "_score": 1.0381742,
      "algo": "semantic",
      "description": "L’outil de calcul de votre index égalité professionnelle Femmes- Hommes",
      "slug": "index-egapro",
      "source": "external",
      "title": "Index Egapro",
      "url": "https://index-egapro.travail.gouv.fr",
    },
  ],
  "themes": Array [
    Object {
      "_score": 1.123209,
      "algo": "semantic",
      "slug": "81-demission",
      "source": "themes",
      "title": "Démission",
    },
    Object {
      "_score": 1.1099768,
      "algo": "semantic",
      "slug": "1-embauche-et-contrat-de-travail",
      "source": "themes",
      "title": "Embauche et contrat de travail",
    },
  ],
}
`;
